--- a/src/SocialNGO/appsettings.Development.json
+++ b/src/SocialNGO/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConStr": "Host={ip}; Database={dbName}; Username={username}; Password={password}"
+    // "DefaultConnection": "Host=127.0.0.1; Database=socialngo; Username={username}; Password=MySql@123",
+    "ConStr": "server=127.0.0.1; port=3306; database=socialngo; user=root; password=MySql@123; Persist Security Info=False; Connect Timeout=300"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +10,11 @@
     }
   },
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "ValidAudience": "http://localhost:57051",
+    "ValidIssuer": "http://localhost:57051"
   },
+
+  //"SigningKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
   "AllowedHosts": "*"
 }
